# MATS

./: LICENSE  README.md  main.py  pyproject.toml
data/: gsm8k_selected_questions.json
src/: analyze_temperature_duration.py
src/benchmark/: __Init__.py  benchmark.py
src/data/: prepare_gsm8k_data.py
src/model/: __init__.py  model.py
src/results/baseline/high_temp/: gsm8k_benchmark_results.json  gsm8k_benchmark_results.txt
src/results/baseline/low_temp/: duration_correctness_analysis.json  duration_correctness_analysis.txt  duration_vs_difficulty_stats.txt  gsm8k_benchmark_results.json  gsm8k_benchmark_results.txt
src/results/robustness/injection/thinking_answering_arithmetic_mistake_high_temp/: gsm8k_robustness_results.json  gsm8k_robustness_results.txt
src/results/robustness/injection/thinking_answering_arithmetic_mistake_low_temp/: gsm8k_robustness_results.json  gsm8k_robustness_results.txt
src/results/robustness/injection/thinking_inconsistent/: gsm8k_robustness_results.json  gsm8k_robustness_results.txt
src/results/robustness/injection/thinking_inconsistent_high_temp/: gsm8k_robustness_results.json  gsm8k_robustness_results.txt
src/results/robustness/injection/thinking_provided_easy/: gsm8k_robustness_results.json  gsm8k_robustness_results.txt
src/results/robustness/injection/thinking_provided_hard/: gsm8k_robustness_results.json  gsm8k_robustness_results.txt
src/results/robustness/injection/thinking_wrong_answering/: gsm8k_robustness_results.json  (+1 more)
src/results/temperature/: temperature_duration_data.csv
src/utils/: __init__.py  plotting.py
(+16 files in other folders)
